--- a/hadoop.env
+++ b/hadoop.env
@@ -17,6 +17,13 @@ YARN_CONF_yarn_timeline___service_generic___application___history_enabled=true
 YARN_CONF_yarn_resourcemanager_system___metrics___publisher_enabled=true
 YARN_CONF_yarn_resourcemanager_hostname=resourcemanager
 YARN_CONF_yarn_timeline___service_hostname=historyserver
-YARN_CONF_yarn_resourcemanager_address=resourcemanager:8032
-YARN_CONF_yarn_resourcemanager_scheduler_address=resourcemanager:8030
-YARN_CONF_yarn_resourcemanager_resource___tracker_address=resourcemanager:8031
+#YARN_CONF_yarn_resourcemanager_address=resourcemanager:8032
+#YARN_CONF_yarn_resourcemanager_scheduler_address=resourcemanager:8030
+#YARN_CONF_yarn_resourcemanager_resource___tracker_address=resourcemanager:8031
+#YARN_CONF_yarn_resourcemanager_ha_enabled=true
+#YARN_CONF_yarn_resourcemanager_ha_rm-ids=resourcemanager
+#YARN_CONF_yarn_nodemanager_resource_memory_mb=1024
+#YARN_CONF_yarn_nodemanager_resource_vcores=4
+#YARN_CONF_yarn_scheduler_minimum__allocation__mb=20480
+#YARN_CONF_yarn_scheduler_maximum__allocation__mb=30720
+#YARN_CONF_yarn_nodemanager_resource_cpu__vcores=4
